Changed some css to make the page grow in length with the content (fixed overflow issues)

--- a/cv-side/src/app/globals.css
+++ b/cv-side/src/app/globals.css
@@ -14,9 +14,17 @@
   }
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
 body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
-
