--- a/cv-side/src/app/styles/theme.css
+++ b/cv-side/src/app/styles/theme.css
@@ -4,7 +4,7 @@
   --color-background: #FFFFFF;     /* White */
   --color-background-alt: #F1FAEE; /* Light Gray */
   --color-text: #1D3557;           /* Navy-ish Gray */
-  --color-text-light: #f2f7ff;     /* Whiteish blueish white but kinda blu */
+  --color-text-light: #f2f7ff;     /* Whiteish blueish white but kinda */
   --color-accent: #A8DADC;         /* Light Sky Blue */
 
   --font-family: 'Arial', sans-serif;
@@ -62,8 +62,10 @@ a:hover {
 }
 
 .animated-background {
-  height: 100vh;
   background: radial-gradient(circle at center, var(--color-secondary) 0%, var(--color-primary) 100%);
+  display: flex; 
+  flex-direction: column;
+  flex: 1;
 }
 
 @keyframes gradientAnimation {
